Fixes and refactoring according to review comments

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
           
           <ul id="openItems" class="openItems">
           </ul>
-          <a id="clearAllOpenItems" class="clearAllOpenItems" href="#">Clear "Open" list</a>
+          <button id="clearAllOpenItems" class="clearAllOpenItems">Clear "Open" list</button>
         </div>
 
         <div class="doneItemsClass">
@@ -52,7 +52,7 @@
           
           <ul id="doneItems" class="doneItems">
           </ul>
-          <a id="clearAllDoneItems" class="clearAllDoneItems" href="#">Clear "Done" list</a>
+          <button id="clearAllDoneItems" class="clearAllDoneItems">Clear "Done" list</button>
         </div>
       </div>
     </div>
